# Airfoil_Tool

./: .gitignore  README.md  pyproject.toml
src/airfoil_tool/: __init__.py  cli.py  database.py  geometry.py  io.py  panel.py  plotting.py
